--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
+authKt = "3.0.1"
 kotlin-version = "2.0.20"
+ktorClientAndroid = "3.0.0"
 serialization-version = "1.9.0"
 datetime-version = "0.6.1"
 clikt-version = "4.4.0"
@@ -18,8 +20,10 @@ navigationFragmentKtx = "2.6.0"
 navigationUiKtx = "2.6.0"
 kotlinxSerializationJson = "1.6.2"
 composeCompiler = "1.5.2"
+storageKt = "3.0.1"
 
 [libraries]
+auth-kt = { module = "io.github.jan-tennert.supabase:auth-kt", version.ref = "authKt" }
 clikt = { module = "com.github.ajalt.clikt:clikt", version.ref = "clikt-version" }
 json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "json-version" }
 datetime = { module = "org.jetbrains.kotlinx:kotlinx-datetime", version.ref = "datetime-version" }
@@ -42,6 +46,9 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerializationJson" }
 androidx-compose-compiler = { module = "androidx.compose.compiler:compiler", version.ref = "composeCompiler" }
+ktor-client-android = { module = "io.ktor:ktor-client-android", version.ref = "ktorClientAndroid" }
+postgrest-kt = { module = "io.github.jan-tennert.supabase:postgrest-kt", version.ref = "authKt" }
+storage-kt = { module = "io.github.jan-tennert.supabase:storage-kt", version.ref = "storageKt" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin-version" }
