--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,7 +7,7 @@ datetime-version = "0.6.1"
 clikt-version = "4.4.0"
 json-version = "1.7.1"
 compose-plugin = "1.6.11"
-agp = "8.6.0-alpha07"
+agp = "8.6.1"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
