--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,11 @@
           xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM"/>
 
     <application
+            android:name="com.example.liftoff.ui.notifications.NotificationApplication"
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
@@ -14,6 +17,7 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.LiftOff"
             tools:targetApi="31">
+        <receiver android:name="com.example.liftoff.ui.notifications.NotificationReceiver" android:enabled="true" android:exported="false" />
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
